# Professional-Machine-Learning-Engineer-Certification

./: DISCLAIMER.md  LICENSE_DECISION.md  Notebook LLM Plan.docx  Plano de estudos de 24 semanas para AI.docx  README.md  deep-research-report.md  desafio_pipeline_Cielo(VisaMastercard).pptx  gcp-ml-service-map.md  pmle-domain-checklist.md  progress.md  roadmap.md  ~$ano de estudos de 24 semanas para AI.docx
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: study-week.md
.github/workflows/: pre-publish-check.yml
docs/: pi-safety-checklist.md
project-blueprints/: document-rule-extraction-demo.md  irrf-llm-demo.md  student-modeling-gcp.md
scripts/: create_project.py  pre_publish_check.py
templates/project-template/: .env.example  .gitignore  DATA_CARD.md  DISCLAIMER.md  Dockerfile  MODEL_CARD.md  README.md  THREAT_MODEL.md  pyproject.toml
templates/project-template/.github/workflows/: ci.yml
templates/project-template/api/: main.py
templates/project-template/docs/adr/: ADR-000-template.md
templates/project-template/eval/: README.md
templates/project-template/infra/: README.md
templates/project-template/tests/: test_health.py
