[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
description = "Projeto demonstrativo para portfólio de AI/ML Engineering"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115,<1.0", "uvicorn[standard]>=0.30,<1.0"]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "httpx>=0.27,<1.0", "ruff>=0.6,<1.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
